# test_ws

install/: local_setup.sh  setup.sh
install/cpp_subscriber/lib/cpp_subscriber/: subscriber
install/cpp_subscriber/share/cpp_subscriber/: package.sh  package.xml
log/: latest_build
src/cpp_subscriber/: CMakeLists.txt
src/cpp_subscriber/src/: subscriber.cpp
